# asmp

./: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Jenkinsfile  Jenkinsfile-macos  vcpkg.json
.github/workflows/: build_binaries.yml  ci.yml  cmake-single-platform.yml  unit_testing.yml
include/audio_file/: AudioFile.h  AudioFileNotFoundException.h  InvalidAudioFileDataException.h  InvalidAudioFileException.h  NoAudioFileException.h
include/audio_file_player/: AudioEngineException.h  AudioFilePlayer.h  NoDevicesAvailableException.h
include/audio_file_reader/: AudioFileReader.h
include/backend/: Backend.h
include/cli/: CLI.h
include/exception/: ASMPException.h
include/ui/: UI.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/audio_file/: AudioFile.cpp  CMakeLists.txt
src/audio_file_player/: AudioFilePlayer.cpp  CMakeLists.txt
src/audio_file_reader/: AudioFileReader.cpp  CMakeLists.txt
src/backend/: Backend.cpp  CMakeLists.txt
src/cli/: CLI.cpp  CMakeLists.txt
src/ui/: CMakeLists.txt  UI.cpp
tests/: CMakeLists.txt
tests/audio_file/: AudioFileTests.cpp  CMakeLists.txt
tests/audio_file_player/: AudioFilePlayerTests.cpp  CMakeLists.txt
tests/audio_file_reader/: AudioFileReaderTests.cpp  CMakeLists.txt
